--- a/_publications/2023-7-21-lime-rdc.md
+++ b/_publications/2023-7-21-lime-rdc.md
@@ -9,7 +9,7 @@ paperurl: 'https://pubs.acs.org/doi/abs/10.1021/acs.iecr.3c00808'
 core:   
 code: 
 paper: /files/2023-I&EC-RDC-Lime.pdf
-IF : 4.326
+Quartile : Q1
 published: Yes
 first_author: true
 authors : "Hardik Prabhu, Aamod Sane, Renu Dhadwal, Naren Rajan Parlikkad, Jayaraman Valadi"
