--- a/_publications/2023-12-27-ai4ts24.md
+++ b/_publications/2023-12-27-ai4ts24.md
@@ -27,7 +27,7 @@ paper: /files/GAN with Soft-DTW and Parallel_camera_ready.pdf
 accepted: 
 first_author: true
 authors: "Hardik Prabhu, Jayaraman Valadi, Pandarasamy Arjunan"
-selected: 1
+selected: true
 ---
 
 
